@@ -3,6 +3,7 @@ Section: devel
 Priority: optional
 Maintainer: Test <testing@nowhere>
 Standards-Version: 3.8.1
+Rules-Requires-Root: no
 
 Package: testpackage
 Architecture: all
