@@ -19,6 +19,8 @@ debhelper (10.9.3) UNRELEASED; urgency=medium
   * dh_installchangelogs: Ditto.
   * dh_installdocs: Ditto.
   * dh_testroot: Update check for root to support R³.
+  * makefile.pm: Call "make install" with DPKG_GAIN_ROOT_CMD when
+    R³ contains the "debhelper/upstream-make-install" keyword.
 
  -- Niels Thykier <niels@thykier.net>  Sat, 14 Oct 2017 11:18:19 +0000
 
